force-app/main/default/objects/Dev_Account__c/Dev_Account__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : Accounts</description>
    <label>Dev Account</label>
    <nameField>
        <displayFormat>Dev-A-{0000000}</displayFormat>
        <label>Dev Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>