force-app/main/default/objects/Dev_Account__c/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>NVIDIA Internal organization category. E.g. Consumer Internet Companies (CIC), CRISP, Automotive, etc.</description>
    <label>Account Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>