force-app/main/default/objects/Dev_Account__c/fields/Account_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_English_Name__c</fullName>
    <label>Account English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>