force-app/main/default/objects/Dev_Account__c/fields/Dev_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Account_Name__c</fullName>
    <label>Dev Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>