force-app/main/default/objects/Dev_Account__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>Company Industry Segment as provided by Leadspace</description>
    <label>Industry Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>