force-app/main/default/objects/Dev_Account__c/fields/Leadspace_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Leadspace_Account_Name__c</fullName>
    <description>Company name as mapped by Leadspace</description>
    <label>Leadspace Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>