force-app/main/default/objects/Dev_Account__c/fields/Leadspace_ID__c.field-meta.xml
<CustomField>
    <fullName>Leadspace_ID__c</fullName>
    <description>Company ID as mapped by Leadspace</description>
    <label>Leadspace ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>