force-app/main/default/objects/Dev_Account__c/fields/Leadspace_Website__c.field-meta.xml
<CustomField>
    <fullName>Leadspace_Website__c</fullName>
    <label>Leadspace Website</label>
    <type>Url</type>
</CustomField>