force-app/main/default/objects/Dev_Account__c/fields/Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_ID__c</fullName>
    <label>Legacy Account ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>