force-app/main/default/objects/Dev_Account__c/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <description>Source of organization name list that the Mastered Account Name was mapped against</description>
    <label>List Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>