force-app/main/default/objects/Dev_Account__c/fields/Master_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Name__c</fullName>
    <description>Mastered organization name</description>
    <label>Master Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>