force-app/main/default/objects/Dev_Account__c/fields/Placeholder1__c.field-meta.xml
<CustomField>
    <fullName>Placeholder1__c</fullName>
    <label>Placeholder1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>