force-app/main/default/objects/Dev_Account__c/fields/Placeholder2__c.field-meta.xml
<CustomField>
    <fullName>Placeholder2__c</fullName>
    <label>Placeholder2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>