force-app/main/default/objects/Dev_Account__c/fields/Sub_Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry_Segment__c</fullName>
    <label>Sub Industry Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>